button iphone issue

--- a/styles/contact_style/contact_style.scss
+++ b/styles/contact_style/contact_style.scss
@@ -75,6 +75,7 @@ $light:300;
             height: 40px;
             border-radius: 20px;
             border: solid 1px;
+            background-color: transparent;
             font-family: $font_family;
         }
     }
